51: Add permission configured in workflow module config on registration to mongo db
