# apis/bpms-api/openapi/v1.yaml
@@ -615,3 +615,8 @@ components:
           type: string
           description: A path added to workflowModuleUri to build a URI for the workflow-provider API
           example: /api/v1/workflow-details-provider
+        permittedRoles:
+          type: array
+          description: The list of roles that are allowed to view this workflow module
+          items:
+            type: string
